<resources>
    <string name="app_name">Diabetes\nFeeding</string>
    <string name="login">login</string>
    <string name="login_big">Login</string>
    <string name="signup">Signup</string>
    <string name="continue_button">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="care_pro">Care Pro</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">Username</string>
    <string name="diabetes_breastfeeding_app">Diabetes Breastfeeding App</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="daily_diet_symptoms_glucose_reading_trends">Daily Diet, Symptoms, Glucose Reading, Trends</string>
    <string name="obgyn">OBGYN</string>
    <string name="postnatal_diaper_changes_observations_baby_weight">Postnatal Diaper Changes, Observations, Baby Weight</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="diabetes">Diabetes</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="prenatal_bmi_weight_progress_tracking_daily_habits">Prenatal BMI, Weight, Progress Tracking, Daily Habits</string>
    <string name="resetting_your_password">Press \u0022continue\u0022 and check your e-mail for instructions for resetting your password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">Welcome</string>
    <string name="agree_terms_and_conditions_title">By pressing \u0022continue\u0022 you agree to our Terms and Conditions.</string>
    <string name="logout">logout</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="user_icon">user_icon</string>
    <string name="todo">TODO</string>
    <string name="wake_up">Wake up</string>
    <string name="of">of</string>
    <string name="insulin">Insulin</string>
    <string name="weight">Weight</string>
    <string name="symptoms">Symptoms</string>
    <string name="progress_obgyn">Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wake_up_fasting">Wake Up Fasting</string>
    <string name="low">low</string>
    <string name="your_blood_sugar_goal">Your blood sugar goal</string>
    <string name="done">done</string>
    <string name="done_plus">done +1</string>
    <string name="done_plus_two">done +2</string>
    <string name="done_plus_five">done +5</string>
    <string name="done_plus_ten">done +10</string>
    <string name="done_plus_twenty">done +20</string>
    <string name="insulin_today">Insulin Today</string>
    <string name="unit"># Unit</string>
    <string name="insulin_type">Insulin Type</string>
    <string name="read_acting_insulin">Rapid acting insulin</string>
    <string name="sorting_acting">Sorting acting</string>
    <string name="total_day_insulin_dose">Total day Insulin Dose</string>
    <string name="total_carbs">Total Carbs</string>
    <string name="current_blood_glucose">Current Blood Glucose</string>
    <string name="target_blood_glucose">Target Blood Glucose</string>
    <string name="unit_unit">Units</string>
    <string name="gram">Grams</string>
    <string name="mg_dl">mg/dl</string>
    <string name="insulin_required">Insulin required</string>
    <string name="your_weight_today">Your weight today</string>
    <string name="your_symptoms_today">Your Symptoms today</string>
    <string name="sweating">Sweating</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="your_total_score">Your Total</string>
    <string name="current_streat_days">Current Streat <b> 5 Days</b></string>
    <string name="profile">Profile</string>
    <string name="enter">Enter</string>
    <string name="lb">lbs</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="monitor_blood_glucose">Monitor Blood Glucose</string>
    <string name="enter_blood_sugar_level">Enter blood sugar level</string>
    <string name="range">Range</string>
    <string name="observations_of_myself">Observations of Myself</string>
    <string name="counseling">Counseling</string>
    <string name="prenatal_visit">Prenatal Visit</string>
    <string name="describe">Describe</string>
    <string name="postpartum">Postpartum</string>
    <string name="hiv_and_other_routine_prenatal_test">HIV and Other Routine Prenatal Test</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="_1st_trimester_topic">1st Trimester Topic</string>
    <string name="dr_mcdonald">Dr. McDonald</string>
    <string name="calculate">calculate</string>
    <string name="blood_glucose_progress">Blood glucose progress</string>
    <string name="hash">#</string>
    <string name="what_can_you_do">What can you do</string>
    <string name="daily_nobservations">Daily\nObservations</string>
    <string name="daily_tracking">Daily Tracking</string>
    <string name="record_breastfeeding_sessions_per_day">Record breastfeeding sessions per day</string>
    <string name="daily_observations">Daily Observations</string>
    <string name="sleep_hours">Sleep Hours</string>
    <string name="appointment">appointment</string>
    <string name="today_at">Today at</string>
    <string name="data_entry">Data Entry</string>
    <string name="show_my_tracking_history">Tracking History</string>
    <string name="insulin_scoreboard">Insulin</string>
    <string name="breast">Breast</string>
    <string name="supplement">Supplement</string>
    <string name="baby_weight">Baby Weight</string>
    <string name="visit">Visit</string>
    <string name="record">Record</string>
    <string name="observe">Observe</string>
    <string name="total">Total</string>
    <string name="current_streat">Current Streat</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for step count.</string>
    <string name="read_step_data">Read step data</string>
    <string name="step_count_display">%1$d steps today</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="bedtime">Bedtime</string>
    <string name="quote_michelle_obama">"Always stay true to yourself and never let what somebody else says distract you from your goals." \n -Michelle Obama.</string>
    <string name="close">close</string>
    <string name="week_of">Week of %1$s</string>
    <string name="ob_gyn_progress">OB/GYN Progress</string>
    <string name="_1st_trimester">1st Trimester</string>
    <string name="height">Height</string>
    <string name="body_mass_index_bmi">Body Mass Index - BMI</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="fundal_height_cm">Fundal Height - CM</string>
    <string name="fetal_heart_rate_beats_per_minute">Fetal Heart Rate - Beats per minute</string>
    <string name="weight_lbs">Weight - Lbs</string>
    <string name="protien">Protien</string>
    <string name="_20">+1</string>
    <string name="_40">+2</string>
    <string name="_60">+3</string>
    <string name="_80">+4</string>
    <string name="urine">Urine</string>
    <string name="save">Save</string>
    <string name="apostrophe"> \'</string>
    <string name="resources">Resources</string>
    <string name="blood_presure_type_systolic"><font size="10">Systolic</font></string>
    <string name="blood_presure_type_diastolic"><font size="10">Diastolic</font></string>
    // Resources Links
    <string name="link_one"><a href="http://www.dcbfc.org/eastRiverLactation.php">D.C. Breastfeeding Coalition</a></string>
    <string name="link_two"><a href="https://www.breastfeedingcenter.org/">The Breastfeeding Center</a></string>
    <string name="link_three"><a href="http://dcbfc.org/eastRiverLactation.php">Children\'s National Anacostia</a></string>
    <string name="link_four"><a href="https://childrensnational.org/visit/resources-for-families/family-services/lactation-services#tab-1">District of Columbia Breastfeeding</a></string>
    <string name="link_five"><a href="http://huhealthcare.com/healthcare/hospital/departments/pediatrics/support-groups">The National Breastfeeding Support at Howard University Hospital</a></string>
    <string name="link_six"><a href="http://www.lllofmd-de-dc.org/Groups/WashingtonDC.html">La Leche league of MD,DE,DC</a></string>
    <string name="link_seven"><a href="https://www.mamatotovillage.org/classes-397249.html">Mamatoto Village</a></string>
    <string name="link_eight"><a href="https://www.medstargeorgetown.org/our-services/womens-health/treatments/parenting-and-lactation-services/">MedStar Georgetown University Hospital</a></string>
    <string name="link_nine"><a href="https://www.hopkinsmedicine.org/gynecology_obstetrics/specialty_areas/birthing-services/sibley-memorial-hospital/lactation-services.htm">John Hopkins Sibley Hospital</a></string>
    <string name="link_ten"><a href="https://www.dcwic.org/wic-families-breastfeeding">DISTRICT OF COLUMBIA WIC STATE AGENCY</a></string>
    <string name="breastfeed">Breastfeed</string>
    <string name="supplemental">Supplemental</string>
    <string name="cancel">Cancel</string>
    <string name="salutation">Salutation</string>
    <string name="first_name">First Name</string>
    <string name="role">Role</string>
    <string name="confirm_phone_number">Confirm Phone Number</string>
    <string name="office_phone_number">Office Phone Number</string>
    <string name="endocrinologist">Endocrinologist</string>
    <string name="obstetrics_gynecology"><![CDATA[Obstetrics & Gynecology]]></string>
    <string name="neo">Neo</string>
    <string name="lactation_specialist">Lactation Specialist</string>
    <string name="clinical_assistant">Clinical Assistant</string>
    <string name="day_care_provider">Day Care Provider</string>
    <string name="patient">Patient</string>
    <string name="administrator">Administrator</string>
    <string name="study_group">Study Group</string>
    <string name="goup_one">Goup One</string>
    <string name="other">Other</string>
    <string name="no_symptoms">No Symptoms</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>
    <string name="social_worker">Social Worker</string>
    <string name="last_name">Last Name</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="admin">admin</string>
    <string name="clinical">clinical</string>
    <string name="your_patients">Your Patients</string>
    <string name="dashboard">dashboard</string>
    <string name="view">View</string>
    <string name="users">Users</string>



</resources>