<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="52dp"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".ui.home.fragment.breastfeeding.ResourcesFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="52dp"
        android:scrollIndicators="none"
        android:scrollbars="none"
        >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/resources"
          android:fontFamily="@font/avenir_next_bold"
          android:textSize="32sp"
          android:id="@+id/tv_resources_title"
          android:gravity="center"
          android:textColor="@color/color_breastfeeding_theme"
          android:maxLines="2"
          android:layout_marginTop="4dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tv_resources_title"
          android:layout_marginTop="20dp"
          android:orientation="vertical"
          android:gravity="start"
          >
          <TextView
              android:id="@+id/tv_link_first"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_one"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:linksClickable="true"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_second"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_two"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:linksClickable="true"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_third"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_three"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_fourth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_four"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_fifth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_five"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:gravity="start"
              android:layout_marginTop="12dp"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_sixth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_six"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_seventh"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_seven"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:gravity="start"
              android:layout_marginTop="12dp"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_eighth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_eight"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_ninth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_nine"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>
          <TextView
              android:id="@+id/tv_link_tenth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/link_ten"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:layout_marginTop="12dp"
              android:gravity="start"
              android:textSize="18sp"/>

      </LinearLayout>

          <com.google.android.material.card.MaterialCardView
              android:layout_width="150dip"
              android:layout_height="42dip"
              android:layout_gravity="center_horizontal"
              app:cardCornerRadius="30dp"
              android:id="@+id/mcv_done_resources"
              app:cardBackgroundColor="@color/color_breastfeeding_theme"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_margin="2dp">
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/done"
                  android:textColor="#fff"
                  android:textSize="20sp" />
          </com.google.android.material.card.MaterialCardView>

      </RelativeLayout>
    </ScrollView>

</FrameLayout>