<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context=".ui.home.fragment.diabetes.InsulinFragment"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="52dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        >
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insulin_today"
            android:gravity="center"
            android:textSize="26sp"
            android:fontFamily="@font/avenir_next_bold"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:lineSpacingMultiplier="0.9"
            android:textColor="@color/color_monitorblood_glucose_theme"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="@string/insulin_required"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:lineSpacingMultiplier="0.9"
        android:maxLines="1"
        android:fontFamily="@font/avenir_next_regular"
        />

    <TextView
        android:id="@+id/tv_display_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="@string/unit"
        android:textColor="@color/color_monitorblood_glucose_theme"
        android:textSize="22sp"
        android:lineSpacingMultiplier="0.9"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/avenir_next_bold"
        />
</LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/insulin_type"
            android:fontFamily="@font/avenir_next_regular"
            android:textColor="@color/colorAccent"
            android:textSize="28sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/read_acting_insulin"
                android:textSize="24sp"
                android:fontFamily="@font/avenir_next_regular"
                android:buttonTint="@color/color_monitorblood_glucose_theme"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop">

            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/sorting_acting"
                android:textSize="24sp"
                android:buttonTint="@color/color_monitorblood_glucose_theme"
                android:fontFamily="@font/avenir_next_regular"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop">

            </RadioButton>

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="@string/total_day_insulin_dose"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    android:paddingEnd="8dp"
                    android:lineSpacingMultiplier="0.9"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/Unit"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/color_monitorblood_glucose_theme"
                    android:layout_margin="2dp">
                    <EditText
                        android:id="@+id/et_tdd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/unit_unit"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/colorWhite"
                        android:background="@null"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="@string/total_carbs"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry"
                    android:lineSpacingMultiplier="0.9"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/gram"
                    android:layout_width="0dp"
                    android:layout_height="60dip"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/color_monitorblood_glucose_theme"
                    android:layout_margin="2dp">
                    <EditText
                        android:id="@+id/et_total_carb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/avenir_next_regular"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/gram"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/colorWhite"                        android:background="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="@string/current_blood_glucose"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry"
                    android:lineSpacingMultiplier="0.9"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mgdl"
                    android:layout_width="0dp"
                    android:layout_height="60dip"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/color_monitorblood_glucose_theme"
                    android:layout_margin="2dp">
                    <EditText
                        android:id="@+id/et_current_blood_glucose"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/avenir_next_regular"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/mg_dl"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/colorWhite"
                        android:background="@null"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:lineSpacingMultiplier="0.9"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="@string/target_blood_glucose"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/totalmg"
                    android:layout_width="0dp"
                    android:layout_height="60dip"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="30dp"
                    app:strokeColor="@color/app_main_text_color"
                    app:strokeWidth="2dp"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/avenir_next_bold"
                        android:layout_gravity="center_horizontal"
                        android:text="80 mg/dl"
                        android:background="@null"
                        android:textColor="@color/app_main_text_color"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_calculate"
                android:layout_width="150dip"
                android:layout_height="45dip"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/color_monitorblood_glucose_theme"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/calculate"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_done"
                android:layout_width="150dip"
                android:layout_height="45dip"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="30dp"
                android:layout_below="@+id/mcv_calculate"
                app:cardBackgroundColor="@color/color_monitorblood_glucose_theme"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/done_plus_five"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>
